--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "EDBot",
-  "description": "EDBot",
-  "version": "0.0.0",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js"
-  },
-  "dependencies": {
-    "discord.js": "^12.2.0",
-    "request": "2.81.0"
-  }
+    "name": "EDBot",
+    "description": "EDBot",
+    "version": "0.0.0",
+    "engines": {
+        "node": "12.x"
+    },
+    "main": "bot.js",
+    "scripts": {
+        "start": "node bot.js"
+    },
+    "dependencies": {
+        "discord.js": "^12.2.0",
+        "request": "2.81.0"
+    }
 }
